# JpegCompressSdk

./: README.md
CommonLib/app/: CMakeLists.txt  build.gradle
CommonLib/app/src/androidTest/java/com/nowy/commonlib/: ExampleInstrumentedTest.java
CommonLib/app/src/main/: AndroidManifest.xml
CommonLib/app/src/main/cpp/: native-lib.c
CommonLib/app/src/main/java/com/nowy/commonlib/: JpegUtil.java
CommonLib/app/src/test/java/com/nowy/commonlib/: ExampleUnitTest.java
CommonLib/gradle/wrapper/: gradle-wrapper.properties
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
doc/com/nowy/commonlib/: BuildConfig.html  ExampleInstrumentedTest.html  ExampleUnitTest.html  JpegUtil.html  R.anim.html  R.attr.html  R.bool.html  R.color.html  R.dimen.html  R.drawable.html  R.html  R.id.html  R.integer.html  R.layout.html  R.mipmap.html  R.string.html  R.style.html  R.styleable.html  package-frame.html  package-summary.html  package-tree.html
doc/include/java/: TJExample.html  TJUnitTest.html  package-frame.html  package-summary.html  package-tree.html
doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
(+10 files in other folders)
